Refactor pipeline validation and controller tests
- Removed the PipelineValidator class as it was deemed unnecessary.
- Updated PipelineControllerTest to improve test structure and readability.
- Added tests for creating pipelines with duplicate stages and handling success scenarios.
- Enhanced PipelineServiceTest with additional tests for modifying pipelines, including handling duplicate stage names and ensuring proper error handling for invalid requests.
- Cleaned up unused imports and improved overall test coverage for pipeline operations.