@@ -5,7 +5,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 
-import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -27,15 +26,16 @@ import com.autobuild.pipeline.definiton.dto.StageDTO;
 import com.autobuild.pipeline.definiton.dto.mapper.StageMapper;
 import com.autobuild.pipeline.definiton.entity.Stage;
 
+
 /**
  * Service Layer for all Pipeline CRUD operations.
  * 
- * @author Suvabrata Chowdhury
+ * @author Suvabrata Chowdhury && Baibhab Dey
  */
-
 @Slf4j
 @Service
 public class PipelineService {
+
     @Autowired
     private PipelineRepository repository;
 
@@ -48,128 +48,82 @@ public class PipelineService {
     @Autowired
     private StageMapper stageMapper;
 
-    public PipelineDTO getPipelineById(final String pipelineId) throws InvalidIdException, IOException {
-        emptyIdCheck(pipelineId);
+    // REMOVED PipelineValidator
 
+    public PipelineDTO getPipelineById(final String pipelineId) throws InvalidIdException, IOException {
+        validatePipelineId(pipelineId);
         try {
             Pipeline pipeline = getPipelineFromId(pipelineId);
             Map<UUID, String> stageContents = fileService.readScriptFiles(pipeline);
-
             PipelineDTO pipelineDTO = mapper.entityToDto(pipeline);
             pipelineDTO.getStages().forEach(stage -> stage.setCommand(stageContents.get(stage.getId())));
-
             log.info("Pipeline with id {} successfully obtained", pipelineDTO.getId());
-
             return pipelineDTO;
-
         } catch (IllegalArgumentException e) {
             throw new InvalidIdException("Pipeline Id is invalid");
         }
     }
 
-    public PipelineDTO createPipeline(final PipelineDTO pipelineDto) throws DuplicateEntryException, IOException {
-        if (null == pipelineDto) {
+    public PipelineDTO createPipeline(final PipelineDTO pipelineDto)
+            throws IOException, DuplicateEntryException, InvalidIdException {
+        if (pipelineDto == null) {
             return null;
         }
+        if (pipelineDto.getName() != null && repository.existsByName(pipelineDto.getName())) {
+            throw new DuplicateEntryException("Pipeline with name '" + pipelineDto.getName() + "' already exists");
+        }
 
-        // set ids of each stage and pipeline
+        // Enforce only bash script type for all incoming stages.
+        if (pipelineDto.getStages() != null) {
+            for (StageDTO s : pipelineDto.getStages()) {
+                validateScriptTypeOnCreate(s.getScriptType());
+            }
+        }
+
         pipelineDto.setId(UUID.randomUUID());
-        pipelineDto.getStages().forEach(stage -> stage.setId(UUID.randomUUID()));
-
+        if (pipelineDto.getStages() != null) {
+            pipelineDto.getStages().forEach(stage -> stage.setId(UUID.randomUUID()));
+        }
         Pipeline pipeline = mapper.dtoToEntity(pipelineDto);
-
         Map<UUID, String> scriptLocations = createScriptFiles(pipelineDto);
         pipeline.getStages().forEach(stage -> stage.setPath(scriptLocations.get(stage.getId())));
-
         Pipeline createdPipeline = repository.save(pipeline);
-
-        log.info("Pipeline with id {} successfully created", createdPipeline.getId());
-
         return mapper.entityToDto(createdPipeline);
     }
 
     public void deletePipelineById(String pipelineId) throws IOException, InvalidIdException {
-        emptyIdCheck(pipelineId);
-
+        validatePipelineId(pipelineId);
         try {
             Pipeline pipeline = getPipelineFromId(pipelineId);
-
             deletePipeline(pipeline);
             log.info("Pipeline with id {} successfully deleted", pipelineId);
-
         } catch (IllegalArgumentException e) {
             throw new InvalidIdException("Pipeline Id is invalid");
         }
     }
 
-    private void emptyIdCheck(final String pipelineId) throws InvalidIdException {
-        if (StringUtils.isEmpty(pipelineId)) {
-            throw new InvalidIdException("Pipeline Id is empty");
-        }
-    }
-
-    private Pipeline getPipelineFromId(final String pipelineId) {
-        Optional<Pipeline> optionalPipeline = getPipelineFromRepository(pipelineId);
-
-        if (!optionalPipeline.isPresent()) {
-            throw new EntityNotFoundException("Pipeline with id " + pipelineId + " not found");
-        }
-
-        Pipeline pipeline = optionalPipeline.get();
-        return pipeline;
-    }
-
-    private Optional<Pipeline> getPipelineFromRepository(final String pipelineId) {
-        return repository.findById(UUID.fromString(pipelineId));
-    }
-
-    private Map<UUID, String> createScriptFiles(PipelineDTO pipeline) throws IOException {
-        try {
-            return fileService.createScriptFiles(pipeline);
-        } catch (IOException e) {
-            fileService.removeScriptFiles(pipeline); // to roll-back the file creation operation
-            throw e;
-        }
-    }
-
-    private void deletePipeline(Pipeline pipeline) throws IOException {
-        deleteScriptFiles(pipeline);
-        repository.delete(pipeline);
-    }
-
-    private void deleteScriptFiles(Pipeline pipeline) throws IOException {
-        fileService.removeScriptFiles(pipeline);
-    }
-
-    public PipelineDTO modifyPipelineStages(String pipelineId, List<StageDTO> stageRequests)
+    public PipelineDTO modifyPipeline(String pipelineId, PipelineDTO patchRequest)
             throws InvalidIdException, IOException, DuplicateEntryException {
 
-        emptyIdCheck(pipelineId);
-        if (stageRequests == null || stageRequests.isEmpty()) {
-            throw new InvalidIdException("No stages provided");
-        }
+        validatePipelineId(pipelineId);
+        validateModifyRequest(patchRequest);
 
         Pipeline pipeline = getPipelineFromId(pipelineId);
 
-        Set<String> existingNames = new HashSet<>();
-        pipeline.getStages().forEach(s -> existingNames.add(s.getName().toLowerCase()));
+        boolean nameChange = patchRequest.getName() != null && !patchRequest.getName().isBlank();
+        boolean stagesChange = patchRequest.getStages() != null && !patchRequest.getStages().isEmpty();
 
-        Set<String> newNamesThisCall = new HashSet<>();
-
-        for (StageDTO req : stageRequests) {
-            boolean isCreate = (req.getId() == null);
-            boolean isDelete = !isCreate &&
-                    isBlank(req.getName())
-                    && isBlank(req.getScriptType())
-                    && isBlank(req.getCommand());
-
-            if (isCreate) {
-                createStage(pipeline, req, existingNames, newNamesThisCall);
-            } else if (isDelete) {
-                deleteStage(pipeline, req.getId(), existingNames);
-            } else {
-                updateStage(pipeline, req, existingNames, newNamesThisCall);
+        if (nameChange) {
+            // Optional pre-check; if you prefer DB constraint remove this block.
+            if (!patchRequest.getName().equals(pipeline.getName()) &&
+                    repository.existsByName(patchRequest.getName())) {
+                throw new DuplicateEntryException("Pipeline with name '" + patchRequest.getName() + "' already exists");
             }
+            pipeline.setName(patchRequest.getName());
+        }
+
+        if (stagesChange) {
+            processStageChanges(pipeline, patchRequest.getStages());
         }
 
         repository.save(pipeline);
@@ -177,49 +131,69 @@ public class PipelineService {
         Map<UUID, String> finalScripts = fileService.readScriptFiles(pipeline);
         PipelineDTO response = mapper.entityToDto(pipeline);
         response.getStages().forEach(s -> s.setCommand(finalScripts.get(s.getId())));
+        log.info("Pipeline with id {} successfully modified", pipelineId);
         return response;
     }
 
-    private void createStage(Pipeline pipeline,
-            StageDTO req, Set<String> existingNames,
-            Set<String> newNamesThisCall)
-            throws InvalidIdException, DuplicateEntryException, IOException {
-
-        validateCreateStage(req);
-        String lower = req.getName().toLowerCase();
-        if (existingNames.contains(lower) || newNamesThisCall.contains(lower)) {
-            throw new DuplicateEntryException("Duplicate stage name: " + req.getName());
+    private void validatePipelineId(String pipelineId) throws InvalidIdException {
+        if (pipelineId == null || pipelineId.isBlank()) {
+            throw new InvalidIdException("Pipeline Id is empty");
         }
+    }
+
+    private void validateModifyRequest(PipelineDTO request) throws InvalidIdException {
+        boolean hasName = request.getName() != null && !request.getName().isBlank();
+        boolean hasStages = request.getStages() != null && !request.getStages().isEmpty();
+        if (!hasName && !hasStages) {
+            throw new InvalidIdException("Request must contain either name or stages");
+        }
+    }
+
+    private void processStageChanges(Pipeline pipeline, List<StageDTO> stageRequests)
+            throws InvalidIdException, IOException, DuplicateEntryException {
+
+        validateStageRequests(stageRequests);
+
+        for (StageDTO req : stageRequests) {
+            boolean isCreate = req.getId() == null;
+            boolean isDelete = !isCreate
+                    && req.getName() == null
+                    && req.getScriptType() == null
+                    && req.getCommand() == null;
+
+            if (isCreate) {
+                createStage(pipeline, req);
+                continue;
+            }
+            if (isDelete) {
+                deleteStage(pipeline, req.getId());
+                continue;
+            }
+            updateStage(pipeline, req);
+        }
+    }
+
+    private void createStage(Pipeline pipeline, StageDTO req)
+            throws IOException, InvalidIdException {
+        validateScriptTypeOnCreate(req.getScriptType());
         req.setId(UUID.randomUUID());
         Stage entity = stageMapper.dtoToEntity(req);
         String path = fileService.createStageScriptFile(pipeline, req);
         entity.setPath(path);
         pipeline.getStages().add(entity);
-        newNamesThisCall.add(lower);
-        existingNames.add(lower);
     }
-
-    private void updateStage(Pipeline pipeline, StageDTO req,
-            Set<String> existingNames, Set<String> newNamesThisCall)
-            throws InvalidIdException, DuplicateEntryException, IOException {
+    private void updateStage(Pipeline pipeline, StageDTO req)
+            throws InvalidIdException, IOException {
 
         Stage toUpdate = findStage(pipeline, req.getId());
 
         if (!isBlank(req.getName())) {
-            String newLower = req.getName().toLowerCase();
-            String oldLower = toUpdate.getName().toLowerCase();
-            if (!newLower.equals(oldLower)
-                    && (existingNames.contains(newLower) || newNamesThisCall.contains(newLower))) {
-                throw new DuplicateEntryException("Duplicate stage name on update: " + req.getName());
-            }
-            existingNames.remove(oldLower);
             toUpdate.setName(req.getName());
-            existingNames.add(newLower);
-            newNamesThisCall.add(newLower);
         }
 
-        if (!isBlank(req.getScriptType())) {
-            toUpdate.setScriptType(req.getScriptType());
+        // Any attempt to provide scriptType in update request is forbidden.
+        if (req.getScriptType() != null) {
+            throw new InvalidIdException("Script type updates are not allowed");
         }
 
         if (!isBlank(req.getCommand())) {
@@ -227,46 +201,83 @@ public class PipelineService {
         }
     }
 
-    private void deleteStage(Pipeline pipeline, UUID stageId,
-            Set<String> existingNames)
-            throws InvalidIdException, IOException {
+    private void validateStageRequests(List<StageDTO> requests)
+            throws InvalidIdException, DuplicateEntryException {
 
+        Set<UUID> ids = new HashSet<>();
+
+        for (StageDTO req : requests) {
+            boolean isCreate = req.getId() == null;
+            boolean isDelete = !isCreate
+                    && req.getName() == null
+                    && req.getScriptType() == null
+                    && req.getCommand() == null;
+
+            if (isCreate) {
+                if (isBlank(req.getName()) || isBlank(req.getScriptType()) || isBlank(req.getCommand())) {
+                    throw new InvalidIdException("Create stage requires name, scriptType, and command");
+                }
+                validateScriptTypeOnCreate(req.getScriptType());
+                continue;
+            }
+
+            if (isDelete) {
+                continue;
+            }
+
+            // For update: scriptType must not be present.
+            if (req.getScriptType() != null) {
+                throw new InvalidIdException("Script type updates are not allowed");
+            }
+
+            if (!ids.add(req.getId())) {
+                throw new DuplicateEntryException("Duplicate stage ID in request: " + req.getId());
+            }
+        }
+    }
+
+    private void validateScriptTypeOnCreate(String scriptType) throws InvalidIdException {
+        if (scriptType == null || !scriptType.equalsIgnoreCase("bash")) {
+            throw new InvalidIdException("Unsupported script type: " + scriptType + ". Only 'bash' is allowed");
+        }
+    }
+    private void deleteStage(Pipeline pipeline, UUID stageId)
+            throws InvalidIdException, IOException {
         Stage toDelete = findStage(pipeline, stageId);
         fileService.removeStageScriptFile(toDelete);
         pipeline.getStages().removeIf(s -> s.getId().equals(stageId));
-        existingNames.remove(toDelete.getName().toLowerCase());
     }
 
-    private Stage findStage(Pipeline pipeline, UUID id)
-            throws InvalidIdException {
+    private Stage findStage(Pipeline pipeline, UUID id) throws InvalidIdException {
         return pipeline.getStages().stream()
                 .filter(s -> s.getId().equals(id))
                 .findFirst()
                 .orElseThrow(() -> new InvalidIdException("Stage not found: " + id));
     }
 
-    private void validateCreateStage(StageDTO req) throws InvalidIdException {
-        if (isBlank(req.getName()) || isBlank(req.getScriptType()) || isBlank(req.getCommand())) {
-            throw new InvalidIdException("Create stage requires name, scriptType, command");
+    private Pipeline getPipelineFromId(final String pipelineId) {
+        Optional<Pipeline> optionalPipeline = repository.findById(UUID.fromString(pipelineId));
+        if (!optionalPipeline.isPresent()) {
+            throw new EntityNotFoundException("Pipeline with id " + pipelineId + " not found");
+        }
+        return optionalPipeline.get();
+    }
+
+    private Map<UUID, String> createScriptFiles(PipelineDTO pipeline) throws IOException {
+        try {
+            return fileService.createScriptFiles(pipeline);
+        } catch (IOException e) {
+            fileService.removeScriptFiles(pipeline);
+            throw e;
         }
     }
-    public PipelineDTO updatePipelineName(String pipelineId, String newName) throws InvalidIdException {
-        emptyIdCheck(pipelineId);
-    
-        if (StringUtils.isBlank(newName)) {
-            throw new InvalidIdException("Pipeline name cannot be blank");
-        }
-    
-        Pipeline pipeline = getPipelineFromId(pipelineId);
-        pipeline.setName(newName);
-    
-        Pipeline updatedPipeline = repository.save(pipeline);
-        log.info("Pipeline with id {} successfully updated with new name {}", pipelineId, newName);
-    
-        return mapper.entityToDto(updatedPipeline);
+
+    private void deletePipeline(Pipeline pipeline) throws IOException {
+        fileService.removeScriptFiles(mapper.entityToDto(pipeline));
+        repository.delete(pipeline);
     }
 
     private boolean isBlank(String v) {
-        return StringUtils.isBlank(v);
+        return v == null || v.isBlank();
     }
 }
